    Zum Debuggen manchmal ganz praktisch :-)
  - direkt nach dem Start schreibt der ngIRCd nun die aktiven Kommando-
    zeilenschalter in's Logfile (Passive, Debug, Sniffer ...).
  - das Signal-Flag SA_RESTART wird nur noch gesetzt, wenn es auf dem
    jeweiligen System auch definiert ist.
  - bei ausgehenden Verbindungen wird nun der Ziel-Port protokolliert.
  - neuer Befehl VERSION.
  - make-Target "check" (und "distcheck") mit Sinn erfuellt :-)
    (die Tests sind aber bisher nicht all zu tiefgehend ...)

ngIRCd 0.2.1, 17.02.2002

  - NICK korrigiert: es werden nun auch alle "betroffenen" User informiert.
  - configure-Script erweitert, u.a. bessere Anpassung an BeOS: dort wird
    nun die "libbe" zum ngIRCd gelinkt, somit funktioniert auch syslog.
  - Fehlerhafte bzw. noch nicht verstandene Modes werden nun ausfuehrlicher
    an den Client geliefert.

ngIRCd 0.2.0, 15.02.2002

  - Nicknames und Channel-Namen werden etwas besser auf Gueltigkeit ueber-
    prueft; ist aber nach wie vor noch nicht ausreichend.
  - NJOINS von Servern wurden nicht an andere Server weitergeleitet.
  - Begonnen Channel-Modes und User-Channel-Modes zu implementieren: der
    Server versteht an User-Modes o und v, beachtet letzteres allerdings
    noch nirgends. Bekannte (aber nicht beachtete!) Channel-Modes sind
    bisher a, m, n, p, q, s und t. Diese Modes werden von Usern ange-
    nommen, von anderen Servern werden auch unbekannte Modes uebernommen.
  - Benutzer von connectierenden Servern wurden nicht in den Channels ange-
    kuendigt, es wurden nur die internen Strukturen angepasst.
  - Nach dem Connect eines Users werden LUSERS-Informationen angezeigt.

ngIRCd 0.1.0, 29.01.2002

  - User-Modes bei User-Registrierungen von andere Servern (NICK-Befehl)
    wurden falsch uebernommen. Zudem wurden die Modes falsch gekuerzt.
  - Server-Verbindungen werden nun nach dem Start erst nach einer kurzen
    Pause aufgebaut (zur Zeit drei Sekunden).