@@ -23,9 +23,10 @@ ngIRCd 0.2.x, xx.xx.2002
   - das Signal-Flag SA_RESTART wird nur noch gesetzt, wenn es auf dem
     jeweiligen System auch definiert ist.
   - bei ausgehenden Verbindungen wird nun der Ziel-Port protokolliert.
-  - neuer Befehl VERSION.
+  - neue Befehle VERSION und KILL implementiert.
   - make-Target "check" (und "distcheck") mit Sinn erfuellt :-)
     (die Tests sind aber bisher nicht all zu tiefgehend ...)
+  - Durch einen Ueberlauf konnte die Idle-Time bei WHOIS negativ werden ...
 
 ngIRCd 0.2.1, 17.02.2002
 
@@ -120,4 +121,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.26 2002/02/21 23:59:52 alex Exp $
+$Id: ChangeLog,v 1.27 2002/02/23 21:39:48 alex Exp $
